Reformat and improve the Windows resource file.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5443 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-11-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * geany_private.rc:
+   Reformat and improve the Windows resource file.
+
+
 2010-11-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * data/filetype_extensions.conf:
