Disable preprocessor #define tracking for the CPP lexer (enabled by default in Scintilla).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/unstable@5444 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * data/filetypes.cpp, data/filetypes.vala, data/filetypes.glsl,
+   data/filetypes.cs, data/filetypes.c:
+   Disable preprocessor #define tracking for the CPP lexer
+   (enabled by default in Scintilla).
+
+
 2010-11-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * scintilla/*:
