Update for Scintilla 2.22.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/unstable@5445 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    data/filetypes.cs, data/filetypes.c:
    Disable preprocessor #define tracking for the CPP lexer
    (enabled by default in Scintilla).
+ * scintilla/scintilla_changes.patch:
+   Update for Scintilla 2.22.
 
 
 2010-11-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
