Add 'Open in New Window' command in the notebook tab menu (based on patch by Matthew Brush, thanks - #3118059).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/unstable@5448 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-11-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/notebook.c:
+   Add 'Open in New Window' command in the notebook tab menu (based on
+   patch by Matthew Brush, thanks - #3118059).
+
+
 2010-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * data/filetypes.cpp, data/filetypes.vala, data/filetypes.glsl,
