Fix not always reporting an error message when saving a document fails. Check result of fclose(). Set errno to 0 before doing disk I/O.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/Geany-0_19_2@5449 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2010-11-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/document.c:
+   Fix not always reporting an error message when saving a document
+   fails.
+   Check result of fclose().
+   Set errno to 0 before doing disk I/O.
+
+
 2010-08-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * scintilla/LexMarkdown.cxx:
