Add missing entry for 0.19.1 release.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/Geany-0_19_2@5450 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,11 @@
    Set errno to 0 before doing disk I/O.
 
 
+2010-08-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * New release: Geany 0.19.1.
+
+
 2010-08-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * scintilla/LexMarkdown.cxx:
