--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Geany 0.19.2 (TBA)
+
+    Fixes:
+    * Fix not always reporting an error message when saving a document
+      fails.
+
+
 Geany 0.19.1 (August 18, 2010)
 
     Fixes:
