Check result of fclose() for utils_write_file().
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5453 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-11-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/utils.c:
+   Check result of fclose() for utils_write_file().
+
+
 2010-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * win32-config.h:
