Warn about file truncation if unsafe file saving fails.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5455 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-12-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/document.c:
+   Warn about file truncation if unsafe file saving fails.
+
+
 2010-11-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/utils.c:
