Set release date.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/Geany-0_19_2@5456 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * New release: Geany 0.19.2.
+
+
 2010-11-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/document.c:
