--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Geany 0.19.2 (TBA)
+Geany 0.19.2 (December 1, 2010)
 
     Fixes:
     * Fix not always reporting an error message when saving a document
