Backport Scintilla HG fix: Remove styling idle in destructor to avoid crashing when idle called after ScintillaGTK instance destroyed (fixes #3111058).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5462 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * scintilla/ScintillaGTK.cxx:
+   Backport Scintilla HG fix: Remove styling idle in destructor to
+   avoid crashing when idle called after ScintillaGTK instance
+   destroyed (fixes #3111058).
+
+
 2010-12-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/document.c:
