Update of German translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5465 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 2010-12-05  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * *.po: Update of po files for string freeze Geany 0.20
+ * de.po: Update of German translation.
 
 
 2010-11-14  Frank Lanitz  <frank@frank.uvena.de>
