Improve error message for document_save_file() if doc->file_name is NULL (reusing existing strings). Add warning about this in the API docs.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5466 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2010-12-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/document.c:
+   Improve error message for document_save_file() if doc->file_name is
+   NULL (reusing existing strings).
+   Add warning about this in the API docs.
+
+
 2010-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * scintilla/ScintillaGTK.cxx:
