Update of Portuguese translation. Thanks to André Glória
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5467 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2010-12-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * pt.po: Update of Portugese translation. Thanks to André Glória for
+          providing
+
+
 2010-12-05  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * *.po: Update of po files for string freeze Geany 0.20
