--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,6 +1,6 @@
 # translation of zh_CN.po to
 # Chinese Simplified translations for geany
-# Copyright (C) 2006 THE geany'S COPYRIGHT HOLDER
+# Copyright (C) 2006-2010 THE geany'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the geany package.
 #
 # Dormouse Young <dormouse.young@gmail.com>, 2006-2009.
@@ -8,12 +8,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Geany 0.19\n"
+"Project-Id-Version: Geany 0.20\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-12-05 15:55+0100\n"
-"PO-Revision-Date: 2010-08-11 11:40+0800\n"
+"PO-Revision-Date: 2010-12-06 21:11+0800\n"
 "Last-Translator: Xhacker Liu <liu.dongyuan@gmail.com>\n"
-"Language-Team: zh_CN <>\n"
+"Language-Team: Chinese (China) <>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -238,9 +238,8 @@ msgid "Error Regular Expression:"
 msgstr "错误正则表达式："
 
 #: ../src/build.c:2013
-#, fuzzy
 msgid "Independent Commands"
-msgstr "文件类型无关的命令"
+msgstr "文件类型无关命令"
 
 #: ../src/build.c:2043
 msgid "Note: Item 2 opens a dialog and appends the response to the command."
@@ -388,29 +387,24 @@ msgid "Detect from file"
 msgstr "根据文件探测"
 
 #: ../src/dialogs.c:181
-#, fuzzy
 msgid "West European"
-msgstr "西欧语系(_W)"
+msgstr "西欧"
 
 #: ../src/dialogs.c:183
-#, fuzzy
 msgid "East European"
-msgstr "东欧语系(_E)"
+msgstr "东欧"
 
 #: ../src/dialogs.c:185
-#, fuzzy
 msgid "East Asian"
-msgstr "东亚语系(_A)"
+msgstr "东亚"
 
 #: ../src/dialogs.c:187
-#, fuzzy
 msgid "SE & SW Asian"
-msgstr "东南亚和西南亚语系(_S)"
+msgstr "东南亚和西南亚"
 
 #: ../src/dialogs.c:189
-#, fuzzy
 msgid "Middle Eastern"
-msgstr "中东语系(_M)"
+msgstr "中东"
 
 #: ../src/dialogs.c:191 ../src/encodings.c:120 ../src/encodings.c:121
 #: ../src/encodings.c:122 ../src/encodings.c:123 ../src/encodings.c:124
@@ -741,17 +735,17 @@ msgstr "错误信息：%s 。"
 #: ../src/document.c:1743
 #, c-format
 msgid "Failed to open file '%s' for writing: fopen() failed: %s"
-msgstr ""
+msgstr "无法打开文件“%s”进行编辑：fopen() 失败：%s"
 
 #: ../src/document.c:1761
 #, c-format
 msgid "Failed to write file '%s': fwrite() failed: %s"
-msgstr ""
+msgstr "无法写文件“%s”：fwrite() 失败：%s"
 
 #: ../src/document.c:1775
 #, c-format
 msgid "Failed to close file '%s': fclose() failed: %s"
-msgstr ""
+msgstr "无法关闭文件“%s”：fclose() 失败：%s"
 
 #: ../src/document.c:1855 ../src/document.c:1927
 msgid "Error saving file."
@@ -769,6 +763,9 @@ msgid ""
 "\n"
 "The file on disk may now be truncated!"
 msgstr ""
+"%s\n"
+"\n"
+"磁盘上的文件可能会被截断！"
 
 #: ../src/document.c:1951
 #, c-format
@@ -818,9 +815,9 @@ msgid "Try to resave the file?"
 msgstr "尝试重新保存文件？"
 
 #: ../src/document.c:3020
-#, fuzzy, c-format
+#, c-format
 msgid "File \"%s\" was not found on disk!"
-msgstr "没有在磁盘上找到文件“%s”！尝试重新保存文件？"
+msgstr "没有在磁盘上找到文件“%s”！"
 
 #: ../src/editor.c:4326
 msgid "Enter Tab Width"
@@ -1273,17 +1270,15 @@ msgstr "跳转到指定行(_G)"
 
 #: ../src/interface.c:818 ../src/interface.c:2258
 msgid "_More"
-msgstr ""
+msgstr "更多(_M)"
 
 #: ../src/interface.c:825 ../src/keybindings.c:398
-#, fuzzy
 msgid "Find Next _Selection"
-msgstr "查找下一个选择"
+msgstr "查找下一个选择(_S)"
 
 #: ../src/interface.c:829 ../src/keybindings.c:400
-#, fuzzy
 msgid "Find Pre_vious Selection"
-msgstr "查找上一个选择"
+msgstr "查找上一个选择(_S)"
 
 #: ../src/interface.c:838 ../src/interface.c:2340
 msgid "Find _Usage"
@@ -1294,7 +1289,6 @@ msgid "Find _Document Usage"
 msgstr "查找文档用法(_D)"
 
 #: ../src/interface.c:851 ../src/keybindings.c:415
-#, fuzzy
 msgid "_Mark All"
 msgstr "标记全部(_M)"
 
@@ -1389,39 +1383,39 @@ msgstr "制表符和空格(_A)"
 
 #: ../src/interface.c:1003
 msgid "Indent Widt_h"
-msgstr ""
+msgstr "缩进宽度(_H)"
 
 #: ../src/interface.c:1010
 msgid "_1"
-msgstr ""
+msgstr "_1"
 
 #: ../src/interface.c:1016
 msgid "_2"
-msgstr ""
+msgstr "_2"
 
 #: ../src/interface.c:1022
 msgid "_3"
-msgstr ""
+msgstr "_3"
 
 #: ../src/interface.c:1028
 msgid "_4"
-msgstr ""
+msgstr "_4"
 
 #: ../src/interface.c:1034
 msgid "_5"
-msgstr ""
+msgstr "_5"
 
 #: ../src/interface.c:1040
 msgid "_6"
-msgstr ""
+msgstr "_6"
 
 #: ../src/interface.c:1046
 msgid "_7"
-msgstr ""
+msgstr "_7"
 
 #: ../src/interface.c:1052
 msgid "_8"
-msgstr ""
+msgstr "_8"
 
 #: ../src/interface.c:1063
 msgid "Read _Only"
@@ -1504,13 +1498,12 @@ msgid "_Close"
 msgstr "关闭(_C)"
 
 #: ../src/interface.c:1213
-#, fuzzy
 msgid "_Apply Default Indentation"
-msgstr "自动缩进(_A)"
+msgstr "使用默认缩进(_A)"
 
 #: ../src/interface.c:1216
 msgid "Apply the default indentation settings to all documents"
-msgstr ""
+msgstr "对所有文档使用默认的缩进设置"
 
 #: ../src/interface.c:1222
 msgid "_Tools"
@@ -1585,9 +1578,8 @@ msgid "_Hide Toolbar"
 msgstr "隐藏工具栏(_H)"
 
 #: ../src/interface.c:2239
-#, fuzzy
 msgid "I_nsert"
-msgstr "插入"
+msgstr "插入(_N)"
 
 #: ../src/interface.c:2319 ../src/keybindings.c:374
 msgid "_Insert Alternative White Space"
@@ -2033,9 +2025,8 @@ msgstr ""
 "慢的机器上应关闭自动换行。"
 
 #: ../src/interface.c:3703
-#, fuzzy
 msgid "\"Smart\" home key"
-msgstr "启用“智能” home 键"
+msgstr "“智能”home 键"
 
 #: ../src/interface.c:3706
 msgid ""
@@ -2060,9 +2051,8 @@ msgid ""
 msgstr "在编辑窗口完全禁用拖放"
 
 #: ../src/interface.c:3713
-#, fuzzy
 msgid "Code folding"
-msgstr "允许代码折叠"
+msgstr "代码折叠"
 
 #: ../src/interface.c:3717
 msgid "Fold/unfold all children of a fold point"
@@ -2120,6 +2110,7 @@ msgid ""
 "Note: To apply these settings to all currently open documents, use "
 "<i>Project->Apply Default Indentation</i>."
 msgstr ""
+"注意：如需将这些设置应用到所有打开的文档，使用 <i>项目 -> 使用默认缩进</i>。"
 
 #: ../src/interface.c:3804 ../src/interface.c:5423
 msgid "Auto-indent mode:"
@@ -2196,13 +2187,12 @@ msgid ""
 msgstr "使用一个按键来使输入的简短字符串变成一个复杂的语句。"
 
 #: ../src/interface.c:3918
-#, fuzzy
 msgid "XML/HTML tag auto-closing"
-msgstr "XML 标记自动完成"
+msgstr "XML/HTML 标记自动完成"
 
 #: ../src/interface.c:3921
 msgid "Insert matching closing tag for XML/HTML"
-msgstr ""
+msgstr "为 XML/HTML 插入匹配的闭标记"
 
 #: ../src/interface.c:3923
 msgid "Automatic continuation of multi-line comments"
@@ -2276,7 +2266,6 @@ msgid "Single quotes ' '"
 msgstr "单引号 ' '"
 
 #: ../src/interface.c:4026
-#, fuzzy
 msgid "Auto-close single quote when typing an opening one"
 msgstr "自动配对单引号"
 
@@ -2514,22 +2503,21 @@ msgstr "<b>编码</b>"
 
 #: ../src/interface.c:4377
 msgid "Ensure new line at file end"
-msgstr "保证文件尾有一个新行"
+msgstr "确保文件尾有一个新行"
 
 #: ../src/interface.c:4380
 msgid "Ensures that at the end of the file is a new line"
-msgstr "保证文件的末端是一个新行"
+msgstr "确保文件的末端是一个新行"
 
 #: ../src/interface.c:4382
-#, fuzzy
 msgid "Ensure consistent line endings"
-msgstr "保证文件尾有一个新行"
+msgstr "确保一致的行尾"
 
 #: ../src/interface.c:4385
 msgid ""
 "Ensures that newline characters always get converted before saving, avoiding "
 "mixed line endings in the same file"
-msgstr ""
+msgstr "确保文件在保存时转换为一致的换行符，避免在同一文件中混合多种行尾"
 
 #: ../src/interface.c:4387
 msgid "Strip trailing spaces and tabs"
@@ -3014,11 +3002,11 @@ msgstr "插入日期"
 
 #: ../src/keybindings.c:376
 msgid "Insert New Line Before Current"
-msgstr ""
+msgstr "在前面插入一个新行"
 
 #: ../src/keybindings.c:378
 msgid "Insert New Line After Current"
-msgstr ""
+msgstr "在后面插入一个新行"
 
 #: ../src/keybindings.c:380
 msgid "Settings"
@@ -3414,9 +3402,9 @@ msgstr "[文件...]"
 
 #. note for translators: library versions are printed after this
 #: ../src/main.c:526
-#, fuzzy, c-format
+#, c-format
 msgid "built on %s with "
-msgstr "(%s 或之后生成)"
+msgstr "生成于 %s，库版本 "
 
 #: ../src/main.c:619
 msgid "Move it now?"
@@ -3925,20 +3913,19 @@ msgstr "在当前选中的文字中替换"
 
 #: ../src/search.c:754
 msgid "Fi_les:"
-msgstr ""
+msgstr "文件(_L)："
 
 #: ../src/search.c:768
-#, fuzzy
 msgid "File patterns, e.g. *.c *.h"
-msgstr "文件模式："
+msgstr "文件模式，比如 *.c *.h"
 
 #: ../src/search.c:780
 msgid "_Directory:"
-msgstr "目录(_D):"
+msgstr "目录(_D)："
 
 #: ../src/search.c:799
 msgid "E_ncoding:"
-msgstr "编码(_N):"
+msgstr "编码(_N)："
 
 #: ../src/search.c:829
 msgid "See grep's manual page for more information"
@@ -3958,7 +3945,7 @@ msgstr "反转查找结果以选择不匹配的行"
 
 #: ../src/search.c:865
 msgid "E_xtra options:"
-msgstr "额外的参数：(_X)"
+msgstr "额外的参数(_X)："
 
 #: ../src/search.c:872
 msgid "Other options to pass to Grep"
@@ -4554,6 +4541,8 @@ msgid ""
 "line: %l / %L\t col: %c\t sel: %s\t %w      %t      %mmode: %M      "
 "encoding: %e      filetype: %f      scope: %S"
 msgstr ""
+"行: %l / %L\t 列: %c\t 选择: %s\t %w      %t      %m模式: %M      编码: "
+"%e      文件类型: %f      范围: %S"
 
 #. RO = read-only
 #: ../src/ui_utils.c:205 ../src/ui_utils.c:212
@@ -4588,9 +4577,8 @@ msgid "MOD"
 msgstr "已修改"
 
 #: ../src/ui_utils.c:362
-#, fuzzy
 msgid " (new instance)"
-msgstr "继承"
+msgstr " (新实例)"
 
 #: ../src/ui_utils.c:392
 #, c-format
@@ -4980,19 +4968,16 @@ msgstr "插入特殊 HTML 字符(_I)"
 
 #. Add menuitem for html replacement functions
 #: ../plugins/htmlchars.c:753
-#, fuzzy
 msgid "_HTML Replacement"
-msgstr "HTML 替换"
+msgstr "HTML 替换(_H)"
 
 #: ../plugins/htmlchars.c:760
-#, fuzzy
 msgid "_Auto-replace Special Characters"
-msgstr "替换特殊字符"
+msgstr "自动替换特殊字符(_A)"
 
 #: ../plugins/htmlchars.c:769
-#, fuzzy
 msgid "_Replace Characters in Selection"
-msgstr "重复行或选中的文本(_D)"
+msgstr "替换选中的字符(_R)"
 
 #: ../plugins/htmlchars.c:784
 msgid "Insert Special HTML Characters"
