Update of Japanese translation. Thanks to Chikahiro Masami.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5469 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2010-12-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
+ * ja.po: Update of Japanese translation. Thanks to Chikahiro Masami.
  * pt.po: Update of Portuguese translation. Thanks to André Glória for
           providing
  * zh_CN.po:
