Update Ignore Tags section with example and menu item.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5474 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@
    List 2 Tools->Configuration Files menu items.
    Add 'Plugin Manager' section break.
    Edit some related sections.
+ * doc/geany.txt, doc/geany.html:
+   Update Ignore Tags section with example and menu item.
 
 
 2010-12-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
