Update of Spanish translation. Thanks to Lucas Vieites.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5476 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * es.po: Update of Spanish translation. Thanks to Lucas Vieites.
+ 
+ 
 2010-12-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * ja.po: Update of Japanese translation. Thanks to Chikahiro Masami.
