Update of Swedish translation. Thanks to Tony Mattsson.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5477 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 2010-12-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * es.po: Update of Spanish translation. Thanks to Lucas Vieites.
+ * sv.po: Update of Swedish translation. Thanks to Tony Mattsson.
  
  
 2010-12-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
