Replace doc-comments with '/* *' comments to show there's no build API for plugins.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5478 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-12-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/build.c, src/build.h:
+   Replace doc-comments with '/* *' comments to show there's no build
+   API for plugins.
+
+
 2010-12-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/keybindings.c, src/callbacks.c, src/vte.h, src/main.c:
