Reduce Set Build Commands dialog column 1 width by using '#' label. Fix memory leak.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5479 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2010-12-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/build.c:
+   Reduce Set Build Commands dialog column 1 width by using '#' label.
+   Fix memory leak.
+
+
 2010-12-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/build.c, src/build.h:
