Update of Finnish translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5482 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,9 +1,14 @@
+2010-12-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * fi.po: Update of Finnish translation. Thanks to Harri Koskinen.
+
+
 2010-12-08  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * es.po: Update of Spanish translation. Thanks to Lucas Vieites.
  * sv.po: Update of Swedish translation. Thanks to Tony Mattsson.
- 
- 
+
+
 2010-12-07  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * ja.po: Update of Japanese translation. Thanks to Chikahiro Masami.
