Update of Slovenian translation. Thanks to Jože Klepec.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5483 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * sl.po: Update of Slovenian translation. Thanks to Jože Klepec.
+
+
 2010-12-09  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * fi.po: Update of Finnish translation. Thanks to Harri Koskinen.
