Update of Turkish translation. Thanks to Gürkan Gür
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5484 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * tr.po: Update of Turkish translation. Thanks to Gürkan Gür.
+
+
 2010-12-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * sl.po: Update of Slovenian translation. Thanks to Jože Klepec.
