Update of British English translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5485 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2010-12-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
+ * en_GB.po: Update British English translation. Thanks to Jeff Bailes.
  * tr.po: Update of Turkish translation. Thanks to Gürkan Gür.
 
 
