--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * hu.po: Update of Hungarian translation. Thanks to Gabor Kmetyko.
+
+
 2010-12-13  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * en_GB.po: Update British English translation. Thanks to Jeff Bailes.
