Added NEWS for 0.19.2
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5487 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Geany 0.19.2 (December 01, 2010)
+    Fixes:
+    * Fix bug where Geany did not always report an error message when
+      saving a document fails.
+
+
 Geany 0.19.1 (August 18, 2010)
 
     Fixes:
