--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Geany 0.20 (t.b.d.s)
+
+    Fixes:
+    * Fixes wrong comments for Ada
+    * Fix a memory leak on build system
+
+    Manual:
+    * Added documentation for HTMLChars
+
+    Internationalisation:
+    * Added translations: kk
+
+
 Geany 0.19.2 (December 01, 2010)
     Fixes:
     * Fix bug where Geany did not always report an error message when
