Update of French translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5489 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2010-12-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * fr.po: Update of French translation. Thanks to Jean-Philippe Moal for
+          providing.
+
+
 2010-12-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * hu.po: Update of Hungarian translation. Thanks to Gabor Kmetyko.
